--- a/Assets/todo.txt
+++ b/Assets/todo.txt
@@ -1,4 +1,4 @@
 * Implement circle-based speed limiter
 * Implement Stations
-* Camera Controls
-* Pause
+* Curved Tracks
+* Automate Intersection Initialization
